--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -7,7 +7,7 @@
   <h1 class="display-4">{{ name }}</h1>
   <p class="lead">{{ summary }}</p>
   <hr class="my-4">
-  <p>Welcome to my professional portfolio website.</p>
+  <p>Welcome to my personal website.</p>
   <a class="btn btn-primary btn-lg" href="/about/" role="button">Know More?</a>
 </div>
 
