--- a/portfolio/templates/portfolio/publications.html
+++ b/portfolio/templates/portfolio/publications.html
@@ -5,7 +5,7 @@
   {% for pub in publications %}
   <li class="list-group-item">
     <strong>{{ pub.title }}</strong><br>
-    <small>{{ pub.details }}</small>
+    <small>{{ pub.details |linebreaksbr }}</small>
     {% if pub.link %}
       <br><a href="{{ pub.link }}" target="_blank">Read More</a>
     {% endif %}
